--- a/research.html
+++ b/research.html
@@ -28,6 +28,8 @@
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
+					<li><a href="projectpi.html">Project PI</a></li>
+
 
 				</ul>
 			</nav>
@@ -61,7 +63,7 @@
 								How has their <b> lifestyle </b> changed? <br>
 							</p>
 
-							<h3> Educators: We Need Your Help. Your Voice is <b> Invaluable </b>. </h3>
+							<h3> Educators: We Need Your Help. Your Voice is <b> Invaluable. </b> </h3>
 							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
 							<a href="https://bit.ly/qsolutions19" class="button special" target="_blank">
 								Survey: The Impact of COVID-19 on Educators</a>
