--- a/videos.html
+++ b/videos.html
@@ -28,6 +28,8 @@
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
+					<li><a href="projectpi.html">Project PI</a></li>
+
 				</ul>
 			</nav>
 
