--- a/projectpi.html
+++ b/projectpi.html
@@ -49,14 +49,17 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-
-							<span class="image right"><img src="images/apple.jpg" alt="" width=400; height=250/></span>
 							</header><br>
 							<h3> <u> What's Project PI? </u> </h3>
 							<p>
 								Besides studying the impact of COVID-19 on educators, our team is working on a side project: <b> Project PI. </b>
-                <br> For <b> Project PI </b>, our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br>
+                <br> For <b> Project PI, </b> our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br>
                 The specific research project we want to highlight is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
+                <br><br>
+                Here are some things we've already created!
+                <br>
+                <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
+
 							</p>
 					</div>
 				</div>
