--- a/projectpi.html
+++ b/projectpi.html
@@ -58,7 +58,7 @@
                 <br><br>
                 Here are some things we've already created!
                 <br>
-                <u> Videos: </u>
+                <u> Videos: </u> <br>
                 <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
                 <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"</iframe>
 							</p>
