add PI infographic

--- a/projectpi.html
+++ b/projectpi.html
@@ -64,6 +64,17 @@
 							</p>
 					</div>
 				</div>
+
+        <div class="content">
+          <header class="align-center">
+            <section class="thumbnails">
+              <div>
+                <a href="infographics/info12pi.png"><img src="infographics/info12pi.png" alt="" />
+                <h5>The Association of Sleep Health and Cognitive Decline</h5>
+                </a>
+              </div>
+        </div>
+      </div>
 			 </section>
 
 		<!-- Footer -->
