--- a/projectpi.html
+++ b/projectpi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Hielo by TEMPLATED
+	Hielo by TEMPLATED, Visualize by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -28,8 +28,7 @@
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
-          <li><a href="projectpi.html">Project PI</a></li>
-
+					<li><a href="projectpi.html">Project PI</a></li>
 				</ul>
 			</nav>
 
@@ -39,6 +38,7 @@
 					<header class="align-center">
 						<p>Lab 19: Quantum Solutions</p>
 						<h2>Project PI</h2>
+
 					</header>
 				</div>
 			</section>
@@ -46,36 +46,40 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
-					<div class="box">
-						<div class="content">
-							<header class="align-center">
-							</header><br>
-							<h3> <u> What's Project PI? </u> </h3>
-							<p>
-								Besides studying the impact of COVID-19 on educators, our team is working on a side project: <b> Project PI. </b>
-                <br> For <b> Project PI, </b> our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br><br>
-                The specific research project we want to highlight is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
-                <br><br>
-                Here are some things we've already created!
-                <br>
-                <u> Videos: </u> <br>
-                <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
-                <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"</iframe>
-							</p>
-					</div>
-				</div>
+						<div class="box">
+							<div class="content">
+								<header class="align-center"></header><br>
 
-        <div class="content">
-          <header class="align-center">
-            <section class="thumbnails">
-              <div>
-                <a href="infographics/info12pi.png"><img src="infographics/info12pi.png" alt="" />
-                <h5>The Association of Sleep Health and Cognitive Decline</h5>
-                </a>
-              </div>
-        </div>
-      </div>
-			 </section>
+								<h3> <u> What's Project PI? </u> </h3>
+								<p>
+									Besides studying the impact of COVID-19 on educators, our team is working on a side project: <b> Project PI. </b>
+	                <br> For <b> Project PI, </b> our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br><br>
+	                The specific research project we want to highlight is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
+	                <br><br>
+	                Here are some things we've already created!
+	                <br>
+	                <u> Videos: </u> <br>
+	                <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
+	                <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"></iframe>
+								</p>
+
+				<section class="thumbnails">
+					<div>
+						<u> Infographics: </u> 
+						<a href="infographics/info12pi.png"><img src="infographics/info12pi.png" alt="" />
+						<h5>The Association of Sleep Health and Cognitive Decline</h5>
+						</a>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+
+			</section>
+
+
+
+
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -95,6 +99,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
