Add infographics to Project PI

--- a/projectpi.html
+++ b/projectpi.html
@@ -57,19 +57,41 @@
 	                The specific research project we want to highlight is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
 	                <br><br>
 	                Here are some things we've already created!
-	                <br>
-	                <u> Videos: </u> <br>
-	                <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
-	                <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"></iframe>
 								</p>
 
+									<u> Videos: </u> <br>
+	                <iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
+	                <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"></iframe>
+									<br><br>
+
+									<u> Infographics: </u>
+
+
+
 				<section class="thumbnails">
-					<div>
-						<u> Infographics: </u> 
+
+						<div>
+						<a href="infographics/info13piA.png"><img src="infographics/info13piA.png" alt="" />
+						<h5> Neurological Disorders (I) </h5>
+						</a>
+						</div>
+
+						<div>
+						<a href="infographics/info13piB.png"><img src="infographics/info13piB.png" alt="" />
+						<h5> Neurological Disorders (II) </h5>
+						</a>
+
 						<a href="infographics/info12pi.png"><img src="infographics/info12pi.png" alt="" />
 						<h5>The Association of Sleep Health and Cognitive Decline</h5>
 						</a>
-					</div>
+						</div>
+
+						<div>
+						<a href="infographics/info13piC.png"><img src="infographics/info13piC.png" alt="" />
+						<h5> Neurological Disorders (III) </h5>
+						</a>
+						</div>
+
 				</section>
 			</div>
 		</div>
