--- a/projectpi.html
+++ b/projectpi.html
@@ -55,8 +55,8 @@
 								<p>
 									Besides studying the impact of COVID-19 on educators, our team is working on a side project: <b> Project PI. </b>
 	                <br> For <b> Project PI, </b> our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br><br>
-									We want to highlight PI Dr. Carol Derby from the Albert Einstein College of Medicine.
-	                Her current research projec is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
+									We want to highlight PI <b> Dr. Carol Derby </b> from the Albert Einstein College of Medicine.
+	                Her current research project is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
 	                <br><br>
 	                Here are some things we've already created!
 								</p>
