--- a/projectpi.html
+++ b/projectpi.html
@@ -57,8 +57,10 @@
 	                <br> For <b> Project PI, </b> our team is creating media to highlight a specific research study that a PI (Principal Investigator) is currently working on. <br><br>
 									We want to highlight PI <b> Dr. Carol Derby </b> from the Albert Einstein College of Medicine.
 	                Her current research project is about the potential effects of sleep quality on cognitive decline. With Alzheimer's Disease projected to triple by 2050, the need to find preventions for declining cognitive function is more urgent than ever.
-	                <br><br>
-	                Here are some things we've already created!
+	                <br>
+									You can check out her research project abstract <a href="https://projectreporter.nih.gov/project_info_description.cfm?icde=0&aid=9716221">here! </a>
+									<br><br>
+									Here are some things we've already created!
 								</p>
 
 									<u> Videos: </u> <br>
@@ -67,8 +69,6 @@
 									<br><br>
 
 									<u> Infographics: </u>
-
-
 
 				<section class="thumbnails">
 
