Added members page

--- a/members.html
+++ b/members.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Videos</title>
+		<title>Members</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/QSlogo.png">
@@ -31,6 +31,7 @@
 					<li><a href="videos.html">Videos</a></li>
 					<li><a href="projectpi.html">Project PI</a></li>
 
+
 				</ul>
 			</nav>
 
@@ -39,7 +40,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Lab 19: Quantum Solutions</p>
-						<h2>Gallery: Videos</h2>
+						<h2>Member Profiles</h2>
 
 					</header>
 				</div>
@@ -50,16 +51,101 @@
 
 			<section id="two" class="wrapper style2">
 				<div class="inner">
+					<!-- <div class="box"> -->
 						<div class="content">
 							<header class="align-center">
-								<iframe width="350" height="250"src="https://www.youtube.com/embed/zCqLNMI8ZtE"> </iframe>
-								<iframe width="350" height="250"src="https://www.youtube.com/embed/1UncOmHhu8s"></iframe>
-								<iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
+								<section class="thumbnails">
+									<div>
+										<a href=""><img src="" alt="" />
+										<h5>Atqiya Nafisa</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Courtney Moua</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Emily Malefyt</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Jenni Ren</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Lamisha Shah</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Nabeelah Islam</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Vrinda Sethi</h5>
+										</a>
+
+									</div>
+
+									<div>
+										<a href=""><img src="" alt="" />
+										<h5>Chase Smith</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Daniel Aduku</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Esha Narla</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Jeslyn Mei</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Malcolm Forte</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Ridhi Gera</h5>
+										</a>
+
+									</div>
+
+									<div>
+										<a href=""><img src="" alt="" />
+										<h5>Christine Wu</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Elena Smith</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Ivy Zheng</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Laila Jeremy</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Moses Ward</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Shiraz Robinson II</h5>
+										</a>
+
+									</div>
+
 								</section>
 						</header>
-				</div>
-			</div>
-	</section>
+					</div>
+				<!-- </div> -->
+			 </section>
+		 </section>
 
 		<!-- Footer -->
 			<footer id="footer">
