--- a/aboutus.html
+++ b/aboutus.html
@@ -25,9 +25,12 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="aboutus.html">About Us</a></li>
+					<li><a href="members.html">Members</a></li>
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
+					<li><a href="projectpi.html">Project PI</a></li>
+
 
 				</ul>
 			</nav>
