--- a/projectpi.html
+++ b/projectpi.html
@@ -25,6 +25,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="aboutus.html">About Us</a></li>
+					<li><a href="members.html">Members</a></li>
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
 					<li><a href="videos.html">Videos</a></li>
