--- a/members.html
+++ b/members.html
@@ -119,7 +119,7 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Elena Smith</h5>
+										<h5>Elena Chadwick</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
