--- a/members.html
+++ b/members.html
@@ -57,11 +57,11 @@
 								<section class="thumbnails">
 									<div>
 										<a href=""><img src="" alt="" />
-										<h5>Atqiya Nafisa</h5>
+										<h5>Daniel Aduku</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Courtney Moua</h5>
+										<h5>Ridhi Gera</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -69,11 +69,24 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Jenni Ren</h5>
+										<h5>Atqiya Nafisa</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Lamisha Shah</h5>
+										<h5>Shiraz Robinson II</h5>
+										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Moses Ward</h5>
+										</a>
+
+
+
+									</div>
+
+									<div>
+										<a href=""><img src="" alt="" />
+										<h5>Elena Chadwick</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -81,19 +94,7 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Vrinda Sethi</h5>
-										<h3> Vrinda is a high school senior who is proud to serve as a part of Mentoring in Medicine! She actively advocates for education, equality, and empowerment through her work in the community. Vrinda’s interest in biology sparked from her involvement in various organizations, which have led to her passion for healthcare. Vrinda also loves spending time on art and writing and she is always excited to meet new people!
-										</a>
-
-									</div>
-
-									<div>
-										<a href=""><img src="" alt="" />
-										<h5>Chase Smith</h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
-										<h5>Daniel Aduku</h5>
+										<h5>Jeslyn Mei</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -101,31 +102,15 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Jeslyn Mei</h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
-										<h5>Malcolm Forte</h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
-										<h5>Ridhi Gera</h5>
+										<h5>Vrinda Sethi</h5>
+										<h5> Vrinda is a high school senior who is proud to serve as a part of Mentoring in Medicine! She actively advocates for education, equality, and empowerment through her work in the community. Vrinda’s interest in biology sparked from her involvement in various organizations, which have led to her passion for healthcare. Vrinda also loves spending time on art and writing and she is always excited to meet new people!</h5>
 										</a>
 
 									</div>
 
 									<div>
 										<a href=""><img src="" alt="" />
-										<h5>Christine Wu</h5>
-										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with a cup of pitch-black coffee at her side! </h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
-										<h5>Elena Chadwick</h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
-										<h5>Ivy Zheng</h5>
+										<h5>Malcolm Forte</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -133,12 +118,19 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Moses Ward</h5>
+										<h5>Courtney Moua</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Shiraz Robinson II</h5>
+										<h5>Jenni Ren</h5>
 										</a>
+
+										<a href=""><img src="" alt="" />
+										<h5>Chase Smith</h5>
+										</a>
+
+										<h5>Christine Wu</h5>
+										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with a cup of pitch-black coffee at her side! </h5>
 
 									</div>
 
