--- a/members.html
+++ b/members.html
@@ -129,8 +129,10 @@
 										<h5>Chase Smith</h5>
 										</a>
 
+										<a href=""><img src="" alt="" />
 										<h5>Christine Wu</h5>
 										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with a cup of pitch-black coffee at her side! </h5>
+									</a>
 
 									</div>
 
