--- a/members.html
+++ b/members.html
@@ -81,8 +81,10 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Ivy Zheng</h5>
-										</a>
+										<h5>Christine Wu</h5>
+										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with her trusty cup of pitch-black coffee at her side! </h5>
+									</a>
+
 
 
 
@@ -110,6 +112,11 @@
 										<h5> Vrinda is a high school senior who is proud to serve as a part of Mentoring in Medicine! She actively advocates for education, equality, and empowerment through her work in the community. Vrinda’s interest in biology sparked from her involvement in various organizations, which have led to her passion for healthcare. Vrinda also loves spending time on art and writing and she is always excited to meet new people!</h5>
 										</a>
 
+										<a href=""><img src="" alt="" />
+										<h5>Ivy Zheng</h5>
+										</a>
+
+
 									</div>
 
 									<div>
@@ -134,9 +141,11 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Christine Wu</h5>
-										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with her trusty cup of pitch-black coffee at her side! </h5>
-									</a>
+										<h5>Lamisha Shah</h5>
+										</a>
+
+
+
 
 									</div>
 
