--- a/members.html
+++ b/members.html
@@ -58,6 +58,7 @@
 									<div>
 										<a href=""><img src="" alt="" />
 										<h5>Daniel Aduku</h5>
+										<h5>Daniel is a 17 year-old high school student who is interested in art and science (particularly chemistry and biology), and interested in becoming a physician in the future.</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
