--- a/members.html
+++ b/members.html
@@ -61,8 +61,9 @@
 										<h5>Daniel is a 17 year-old high school student who is interested in art and science (particularly chemistry and biology), and interested in becoming a physician in the future.</h5>
 										</a>
 
-										<a href=""><img src="" alt="" />
+										<a href="members/Ridhi.png"><img src="members/Ridhi.png" alt="" />
 										<h5>Ridhi Gera</h5>
+										<h5> Ridhi is a rising high school sophomore who is involved not only with MIM but many other non-profits to bring awareness and empowerment to the medical field. Taking up the role of president in her Class of 2023 and being involved with the school newspaper, she is passionate for her ideas to be shared in her school community. Some of her hobbies include Bollywood dancing, baking, and playing tennis and bowling. When she grows up she wants to become a neurosurgeon who conducts clinical trials on aggressive tumors and glioblastomas in the human brain. </h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -78,17 +79,13 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Moses Ward</h5>
+										<h5>Chase Smith</h5>
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Christine Wu</h5>
-										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with her trusty cup of pitch-black coffee at her side! </h5>
-									</a>
-
-
-
-
+										<h5>Ivy Zheng</h5>
+										<h5> Ivy is a high school junior who is in her school’s science research program. She is interested in the medical field hoping to help everyone. Her interest in the society has sparked her to participate in services. She enjoys making new friends at any opportunity. If she ever has free time, you can always find her playing volleyball or drawing! </h5>
+										</a>
 									</div>
 
 									<div>
@@ -114,9 +111,8 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Ivy Zheng</h5>
+										<h5>Moses Ward</h5>
 										</a>
-
 
 									</div>
 
@@ -138,15 +134,13 @@
 										</a>
 
 										<a href=""><img src="" alt="" />
-										<h5>Chase Smith</h5>
-										</a>
-
-										<a href=""><img src="" alt="" />
 										<h5>Lamisha Shah</h5>
 										</a>
 
-
-
+										<a href=""><img src="" alt="" />
+										<h5>Christine Wu</h5>
+										<h5> Christine is currently a rising sophomore at Cornell University, hoping to get into pediatrics or education in the future! She's also interested in delving into the world of public health. In her free time, Christine likes to paint, doodle and read -- and you can always find her with her trusty cup of pitch-black coffee at her side! </h5>
+									</a>
 
 									</div>
 
