--- a/projectpi.html
+++ b/projectpi.html
@@ -69,6 +69,10 @@
 	                <iframe width="350" height="250"src="https://www.youtube.com/embed/MnLBZvqaMZY"></iframe>
 									<br><br>
 
+									<u> Our 5-minute overview of her research: </u> <br>
+									<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRJZgqwvIkMeYyTo6niHZg_NKg9TGyDn4QpZVPuWwgfqjDx4qm4uBhEhFBDPw9ssMo1nSXB0iqVcvnI/embed?start=true&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+									<br>
+
 									<u> Infographics: </u>
 
 				<section class="thumbnails">
