--- a/members.html
+++ b/members.html
@@ -62,7 +62,7 @@
 										</a>
 
 										<h5>Ridhi Gera</h5>
-										<a href="members/Ridhi.png"><img src="members/Ridhi.png" alt="" /> 
+										<a href="members/Ridhi.png"><img src="members/Ridhi.png" alt="" />
 										<h6> Ridhi is a rising high school sophomore who is involved not only with MIM but many other non-profits to bring awareness and empowerment to the medical field. Taking up the role of president in her Class of 2023 and being involved with the school newspaper, she is passionate for her ideas to be shared in her school community. Some of her hobbies include Bollywood dancing, baking, and playing tennis and bowling. When she grows up she wants to become a neurosurgeon who conducts clinical trials on aggressive tumors and glioblastomas in the human brain. </h6>
 									</a>
 
@@ -125,12 +125,15 @@
 										<h5>Laila Jeremy</h5>
 										</a>
 
-										<a href=""><img src="" alt="" />
 										<h5>Courtney Moua</h5>
+										<a href="members/Courtney.jpg"><img src="members/Courtney.jpg" alt="" />
+										<h6> Courtney is a Hmong-American and a rising senior at the University of Tennessee-Knoxville, majoring in Chemistry. During her free time, she volunteers at shelters while obtaining clinical hours as she plans to go to Veterinarian School. Later on down the road, she hopes to open up her own practice on the West Coast. </h6>
 										</a>
 
-										<a href=""><img src="" alt="" />
 										<h5>Jenni Ren</h5>
+										<a href="members/Jenni.png"><img src="members/Jenni.png" alt="" />
+										<h6> Jenni is currently a highschool senior at Bronx Science! She joined MIM to learn more about the healthcare profession and have fun. This program has taught her so much more than she anticipated and she is very grateful to be a part of this amazing experience. She worked with an amazing team during this program and it has really opened her eyes to the magic that can happen when motivated individuals works together. She really enjoys making digital art and using my art to spread positivity :). She also loves playing Pokémon and other video games in my free time. She can’t wait to see what more will be in store for her in the future :D!</h6>
+
 										</a>
 
 										<a href=""><img src="" alt="" />
