--- a/members.html
+++ b/members.html
@@ -66,8 +66,9 @@
 										<h6> Ridhi is a rising high school sophomore who is involved not only with MIM but many other non-profits to bring awareness and empowerment to the medical field. Taking up the role of president in her Class of 2023 and being involved with the school newspaper, she is passionate for her ideas to be shared in her school community. Some of her hobbies include Bollywood dancing, baking, and playing tennis and bowling. When she grows up she wants to become a neurosurgeon who conducts clinical trials on aggressive tumors and glioblastomas in the human brain. </h6>
 									</a>
 
-										<a href=""><img src="" alt="" />
 										<h5>Emily Malefyt</h5>
+										<a href="members/Emily.png"><img src="members/Emily.png" alt="" />
+										<h6> Emily is a 17 year old just leaving highschool. Currently, she is studying neurology and biology. She wants to have a future career interest in Neuroscience. </h6>
 										</a>
 
 										<a href=""><img src="" alt="" />
@@ -119,6 +120,7 @@
 									<div>
 										<a href=""><img src="" alt="" />
 										<h5>Malcolm Forte</h5>
+										<h6> Malcolm is in 6th grade and will attend Simpson Middle School. He likes to play video games with his cousin and wants to become an epidemiologist when he grows up! </h6>
 										</a>
 
 										<a href=""><img src="" alt="" />
